--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.profiles.active=${ACTIVE_PROFILE:dev}
+spring.flyway.locations=classpath:db/migration,classpath:db/migration-dev
